UI: Final alignment fix for Month header height

--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -61,7 +61,7 @@ body {
   
   .monthHeader {
     position: absolute;
-    top: 165px;   
+    top: 150px;   
     left: 0;
     width: 100%;
   
@@ -71,6 +71,7 @@ body {
   
     padding: 0 20px;
     z-index: 2;
+    color: white;
   }
   
   .monthHeader h2 {
